# patent-innovation-variables

./: .gitignore  README.md  pyproject.toml  requirements.txt
patent_analysis/: __init__.py  __main__.py  citation.py  citations.py  citations_dummy.py  join_outputs.py
patent_analysis/resources/mini/: output.parquet  patent.tsv  sample.csv  uspatentcitation.tsv
patent_analysis/resources/truncated/: patent.tsv  sample.csv  uspatentcitation.tsv
patent_innovation_variables/: citations.py  citations_dummy.py  join_outputs.py
tests/: conftest.py  test_citation.py  test_citations.py  test_citations_dummy.py
tests/fixtures/citation/: uspatentcitation.tsv
tests/fixtures/citations/: output_sample.tsv
tests/fixtures/citations/citations/: patent.tsv
tests/fixtures/citations_dummy/: generate_input_data.py
tests/fixtures/citations_dummy/citations/: output_universe.tsv  sample.csv
tests/fixtures/citations_dummy/citations_dummy/: ipcr.tsv  output.tsv
