[tool.poetry]
name = "patent-analysis"
version = "0.1.0"
description = ""
authors = ["Fisher Sun <fisher521.fs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
polars = {extras = ["pyarrow"], version = "^0.13.54"}
connectorx = "^0.3.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
